--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "front-code-style-cli",
+  "name": "argrace-fe-cli",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
-    "codeStyle": "./bin/start.js"
+    "Argrace": "./bin/start.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -28,6 +28,7 @@
     "colors": "^1.3.2"
   },
   "devDependencies": {
-    "eslint": "^6.3.0"
+    "eslint": "^6.3.0",
+    "glob": "^7.1.4"
   }
 }
